[gd_scene load_steps=6 format=3 uid="uid://clc1mfktlibsx"]

[ext_resource type="Texture2D" uid="uid://cphrlllty8sy3" path="res://Assets/tileset.png" id="1_in0bw"]
[ext_resource type="Script" path="res://game.gd" id="2_n7ygv"]
[ext_resource type="Script" path="res://UI.gd" id="3_8rg0c"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kpylb"]
texture = ExtResource("1_in0bw")
0:0/0 = 0
1:0/0 = 0

[sub_resource type="TileSet" id="TileSet_yn2ok"]
sources/0 = SubResource("TileSetAtlasSource_kpylb")

[node name="Game" type="TileMap"]
tile_set = SubResource("TileSet_yn2ok")
format = 2
script = ExtResource("2_n7ygv")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("3_8rg0c")

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
offset_left = 224.0
offset_top = 588.0
offset_right = 984.0
offset_bottom = 648.0
theme_override_constants/separation = 60
alignment = 1
metadata/_edit_group_ = true

[node name="Panel" type="Panel" parent="UI/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="Label" type="Label" parent="UI/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Press Enter to Hide/Show UI"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="UI/HBoxContainer"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
metadata/_edit_group_ = true

[node name="CenterContainer" type="CenterContainer" parent="UI/HBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HBoxContainer/Panel2/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="UI/HBoxContainer/Panel2/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "Speed: "

[node name="HSlider" type="HSlider" parent="UI/HBoxContainer/Panel2/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(320, 40)
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="Button" type="Button" parent="UI/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
disabled = true
text = "Reset"

[node name="ExitButton" type="Button" parent="UI"]
custom_minimum_size = Vector2(60, 40)
offset_left = 1088.0
offset_top = 59.0
offset_right = 1148.0
offset_bottom = 99.0
text = "Exit"

[connection signal="maze_cleared" from="." to="." method="_on_maze_cleared"]
[connection signal="maze_finished" from="." to="." method="_on_maze_finished"]
[connection signal="value_changed" from="UI/HBoxContainer/Panel2/CenterContainer/HBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="UI/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="UI/ExitButton" to="." method="_on_exit_button_pressed"]
